--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -97,7 +97,7 @@
             app:layout_constraintTop_toBottomOf="@id/steps_process" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/label_safe_with_us_descriptio"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -116,9 +116,9 @@
             android:layout_height="wrap_content"
             android:hint="@string/username"
 
-            app:layout_constraintEnd_toEndOf="@+id/textView4"
-            app:layout_constraintStart_toStartOf="@+id/textView4"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:layout_constraintEnd_toEndOf="@+id/label_safe_with_us_descriptio"
+            app:layout_constraintStart_toStartOf="@+id/label_safe_with_us_descriptio"
+            app:layout_constraintTop_toBottomOf="@+id/label_safe_with_us_descriptio"
             app:startIconDrawable="@drawable/ic_username">
 
             <com.google.android.material.textfield.TextInputEditText
